# light-trpg-agent

./: .gitignore  LICENSE  README.md  light-trpg-agent.py  pyproject.toml
schemas/: game_state.py
tools/: __init__.py  roll_dice.py  summarize_story.py  update_game_state.py
