[tool.poetry]
name = "trpg-agent"
version = "0.1.0"
description = ""
authors = ["edo1z <endo.yuta@logicky.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.60"
langchain-anthropic = "^0.3.1"
langchain-openai = "^0.2.14"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
